examples/test/testpolicy11230.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11230
  namespace: namespace376
spec:
  podSelector:
    matchLabels:
      key30: value45
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key30: value12
          key32: value9
          key17: value31
      podSelector:
        matchLabels:
          key0: value16
          key26: value1
          key38: value37
